--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -33,7 +33,7 @@ table {
 
 th {
   background-color: var(--color-background-soft);
-    color: var(--color-background-font);
+  color: var(--color-background-font);
   border-left: none !important;
   border-right: none !important;
 }
@@ -47,6 +47,7 @@ th {
   text-align: center !important;
   padding: 8px;
 }
+
 tr {
   background-color: var(--color-background-mute);
   color: var(--color-background-font);
@@ -81,7 +82,7 @@ tr {
 }
 
 .dropdown-item {
-    color: var(--color-nav-text);
+  color: var(--color-nav-text);
 }
 
 .dropdown-menu li a:hover,
@@ -214,6 +215,7 @@ tr {
 .btn {
   user-select: none;
 }
+
 .btn:hover {
   cursor: pointer;
 }
@@ -250,161 +252,160 @@ tr {
 }
 
 .btn-primary {
-    --bs-btn-color: var(--color-primary-font);
-    --bs-btn-bg: var(--color-primary);
-    --bs-btn-border-color: var(--color-primary);
-    --bs-btn-hover-color: var(--color-primary-font);
-    --bs-btn-hover-bg: var(--color-primary-hover);
-    --bs-btn-hover-border-color: var(--color-primary-hover);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--color-primary-font);
-    --bs-btn-active-bg: var(--color-primary-active);
-    --bs-btn-active-border-color: var(--color-primary-active);
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: var(--color-primary-font);
-    --bs-btn-disabled-bg: var(--color-primary-disabled);
-    --bs-btn-disabled-border-color: var(--color-primary-disabled);
+  --bs-btn-color: var(--color-primary-font);
+  --bs-btn-bg: var(--color-primary);
+  --bs-btn-border-color: var(--color-primary);
+  --bs-btn-hover-color: var(--color-primary-font);
+  --bs-btn-hover-bg: var(--color-primary-hover);
+  --bs-btn-hover-border-color: var(--color-primary-hover);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: var(--color-primary-font);
+  --bs-btn-active-bg: var(--color-primary-active);
+  --bs-btn-active-border-color: var(--color-primary-active);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--color-primary-font);
+  --bs-btn-disabled-bg: var(--color-primary-disabled);
+  --bs-btn-disabled-border-color: var(--color-primary-disabled);
 }
 
 .btn-primary-temp {
-    --bs-btn-color: var(--color-primary-font);
-    --bs-btn-bg: var(--color-primary);
-    --bs-btn-border-color: var(--color-primary);
-    --bs-btn-hover-color: var(--color-primary-font);
-    --bs-btn-hover-bg: var(--color-primary-hover);
-    --bs-btn-hover-border-color: var(--color-primary-hover);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--color-primary-font);
-    --bs-btn-active-bg: var(--color-primary-active);
-    --bs-btn-active-border-color: var(--color-primary-active);
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: var(--color-primary-font);
-    --bs-btn-disabled-bg: var(--color-primary-disabled);
-    --bs-btn-disabled-border-color: var(--color-primary-disabled);
+  --bs-btn-color: var(--color-primary-font);
+  --bs-btn-bg: var(--color-primary);
+  --bs-btn-border-color: var(--color-primary);
+  --bs-btn-hover-color: var(--color-primary-font);
+  --bs-btn-hover-bg: var(--color-primary-hover);
+  --bs-btn-hover-border-color: var(--color-primary-hover);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: var(--color-primary-font);
+  --bs-btn-active-bg: var(--color-primary-active);
+  --bs-btn-active-border-color: var(--color-primary-active);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--color-primary-font);
+  --bs-btn-disabled-bg: var(--color-primary-disabled);
+  --bs-btn-disabled-border-color: var(--color-primary-disabled);
 }
 
 .btn-secondary {
-    --bs-btn-color: var(--color-secondary-font);
-    --bs-btn-bg: var(--color-secondary);
-    --bs-btn-border-color: var(--color-secondary);
-    --bs-btn-hover-color: var(--color-secondary-font);
-    --bs-btn-hover-bg: var(--color-secondary-hover);
-    --bs-btn-hover-border-color: var(--color-secondary-hover);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--color-secondary-font);
-    --bs-btn-active-bg: var(--color-secondary-active);
-    --bs-btn-active-border-color: var(--color-secondary-active);
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: var(--color-secondary-font);
-    --bs-btn-disabled-bg: var(--color-secondary-disabled);
-    --bs-btn-disabled-border-color: var(--color-secondary-disabled);
+  --bs-btn-color: var(--color-secondary-font);
+  --bs-btn-bg: var(--color-secondary);
+  --bs-btn-border-color: var(--color-secondary);
+  --bs-btn-hover-color: var(--color-secondary-font);
+  --bs-btn-hover-bg: var(--color-secondary-hover);
+  --bs-btn-hover-border-color: var(--color-secondary-hover);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: var(--color-secondary-font);
+  --bs-btn-active-bg: var(--color-secondary-active);
+  --bs-btn-active-border-color: var(--color-secondary-active);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--color-secondary-font);
+  --bs-btn-disabled-bg: var(--color-secondary-disabled);
+  --bs-btn-disabled-border-color: var(--color-secondary-disabled);
 }
 
 .btn-secondary-temp {
-    --bs-btn-color: var(--color-secondary-font);
-    --bs-btn-bg: var(--color-secondary);
-    --bs-btn-border-color: var(--color-secondary);
-    --bs-btn-hover-color: var(--color-secondary-font);
-    --bs-btn-hover-bg: var(--color-secondary-hover);
-    --bs-btn-hover-border-color: var(--color-secondary-hover);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--color-secondary-font);
-    --bs-btn-active-bg: var(--color-secondary-active);
-    --bs-btn-active-border-color: var(--color-secondary-active);
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: var(--color-secondary-font);
-    --bs-btn-disabled-bg: var(--color-secondary-disabled);
-    --bs-btn-disabled-border-color: var(--color-secondary-disabled);
+  --bs-btn-color: var(--color-secondary-font);
+  --bs-btn-bg: var(--color-secondary);
+  --bs-btn-border-color: var(--color-secondary);
+  --bs-btn-hover-color: var(--color-secondary-font);
+  --bs-btn-hover-bg: var(--color-secondary-hover);
+  --bs-btn-hover-border-color: var(--color-secondary-hover);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: var(--color-secondary-font);
+  --bs-btn-active-bg: var(--color-secondary-active);
+  --bs-btn-active-border-color: var(--color-secondary-active);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--color-secondary-font);
+  --bs-btn-disabled-bg: var(--color-secondary-disabled);
+  --bs-btn-disabled-border-color: var(--color-secondary-disabled);
 }
 
 .btn-danger {
-    --bs-btn-color: #fff;
-    --bs-btn-bg: #ad6060;
-    --bs-btn-border-color: #ad6060;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #935252;
-    --bs-btn-hover-border-color: #935252;
-    --bs-btn-focus-shadow-rgb: 225, 83, 97;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #794343;
-    --bs-btn-active-border-color: #794343;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #ad6060;
-    --bs-btn-disabled-border-color: #ad6060;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #ad6060;
+  --bs-btn-border-color: #ad6060;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #935252;
+  --bs-btn-hover-border-color: #935252;
+  --bs-btn-focus-shadow-rgb: 225, 83, 97;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #794343;
+  --bs-btn-active-border-color: #794343;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #ad6060;
+  --bs-btn-disabled-border-color: #ad6060;
 }
 
 .btn-link {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .btn-link, .routerLink {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .btn-link:hover, .routerLink:hover {
-    color: var(--color-primary-hover);
+  color: var(--color-primary-hover);
 }
 
 .btn-link:active, .routerLink:active {
-    color: var(--color-primary-active);
+  color: var(--color-primary-active);
 }
 
 .pagination {
-    --bs-pagination-padding-x: 0.75rem;
-    --bs-pagination-padding-y: 0.375rem;
-    --bs-pagination-font-size: 1rem;
-    --bs-pagination-color: var(--color-primary-font);
-    --bs-pagination-bg: var(--color-primary);
-    --bs-pagination-border-width: var(--bs-border-width);
-    --bs-pagination-border-color: var(--color-border);
-    --bs-pagination-border-radius: var(--bs-border-radius);
-    --bs-pagination-hover-color: var(--color-primary-font);
-    --bs-pagination-hover-bg: var(--color-primary-hover);
-    --bs-pagination-hover-border-color: var(--color-border);
-    --bs-pagination-focus-color: var(--color-primary-font);
-    --bs-pagination-focus-bg: var(--color-primary-hover);
-    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.25);
-    --bs-pagination-active-color: var(--color-primary-font);
-    --bs-pagination-active-bg: var(--color-primary-active);
-    --bs-pagination-active-border-color: var(--color-border);
-    --bs-pagination-disabled-color: var(--color-background-font);
-    --bs-pagination-disabled-bg: var(--color-background-mute);
-    --bs-pagination-disabled-border-color: var(--color-border);
-    list-style: none;
+  --bs-pagination-padding-x: 0.75rem;
+  --bs-pagination-padding-y: 0.375rem;
+  --bs-pagination-font-size: 1rem;
+  --bs-pagination-color: var(--color-primary-font);
+  --bs-pagination-bg: var(--color-primary);
+  --bs-pagination-border-width: var(--bs-border-width);
+  --bs-pagination-border-color: var(--color-border);
+  --bs-pagination-border-radius: var(--bs-border-radius);
+  --bs-pagination-hover-color: var(--color-primary-font);
+  --bs-pagination-hover-bg: var(--color-primary-hover);
+  --bs-pagination-hover-border-color: var(--color-border);
+  --bs-pagination-focus-color: var(--color-primary-font);
+  --bs-pagination-focus-bg: var(--color-primary-hover);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.25);
+  --bs-pagination-active-color: var(--color-primary-font);
+  --bs-pagination-active-bg: var(--color-primary-active);
+  --bs-pagination-active-border-color: var(--color-border);
+  --bs-pagination-disabled-color: var(--color-background-font);
+  --bs-pagination-disabled-bg: var(--color-background-mute);
+  --bs-pagination-disabled-border-color: var(--color-border);
+  list-style: none;
 }
 
 .progress {
-    --bs-progress-bar-bg: var(--color-primary, #7561a9);
-    --bs-progress-bg: var(--color-background-soft, #d8d8d8);
-    border: 1px solid var(--color-background-mute,#b9b9b9);
+  --bs-progress-bar-bg: var(--color-primary, #7561a9);
+  --bs-progress-bg: var(--color-background-soft, #d8d8d8);
+  border: 1px solid var(--color-background-mute, #b9b9b9);
 }
 
 .alert {
-    --bs-alert-border: 1px solid #ad6060;
-    --bs-alert-bg: #e4b6b6;
+  --bs-alert-border: 1px solid #ad6060;
+  --bs-alert-bg: #e4b6b6;
 }
+
 .offcanvas-header {
-    background-color: var(--color-background);
-    color: var(--color-background-font);
-    box-shadow: var(--vt-c-black)0,0,10px;
+  background-color: var(--color-background);
+  color: var(--color-background-font);
+  box-shadow: var(--vt-c-black) 0, 0, 10px;
 }
 
 .offcanvas-body {
-    background-color: var(--color-background-soft);
-    color: var(--color-background-font);
-    position: relative;
+  background-color: var(--color-background-soft);
+  color: var(--color-background-font);
+  position: relative;
 }
 
-button i {
-    color: var(--color-nav-text-hover);
+button:not(.btn-primary):not(.btn-secondary) i {
+  color: var(--color-nav-text-hover);
 }
-button:hover i {
-    color: var(--color-background-font);
+
+button:not(.btn-primary):not(.btn-secondary):hover i {
+  color: var(--color-background-font);
 }
-.form-check-input:checked {
-    color: var(--color-primary-font);
-    background-color: var(--color-primary);
-    border-color: var(--color-border);
-}
+
+
 
