fix: styling issues in submit a job form control text

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -267,6 +267,7 @@ tr {
 .form-control:focus {
   outline: none;
   box-shadow: none;
+  color: var(--color-modal-background-inverted);
 }
 
 .form-control {
