--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -23,6 +23,11 @@ table {
   border: 1px solid var(--color-border-invert);
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
+}
+
+tr {
+  background-color: var(--color-background) ;
 }
 
 .table td,
@@ -36,6 +41,7 @@ th {
   color: var(--color-background-font);
   border-left: none !important;
   border-right: none !important;
+  user-select: none;
 }
 
 td,
@@ -73,6 +79,7 @@ tr {
 
 .accordion-item {
   border: 1px solid var(--color-modal-background-inverted);
+  background-color: var(--color-background);
 }
 
 .dropdown-menu.show,
@@ -102,48 +109,59 @@ tr {
 
 .modal-content {
   color: var(--color-background-font);
-  background-color: var(--color-background);
+  background-color: var(--color-background) !important;
   border: 1px solid var(--color-modal-background-inverted);
 }
 
 .modal-header {
   color: var(--color-background-font);
-  background-color: var(--color-background-mute);
+  background-color: var(--color-background-soft);
   border-bottom: 1px solid var(--color-modal-background-inverted);
 }
 
 .modal-footer {
   color: var(--color-background-font);
-  background-color: var(--color-background-mute);
+  background-color: var(--color-background-soft);
   border-top: 1px solid var(--color-modal-background-inverted);
 }
 
 .modal-body .card-body, .card-body {
   color: var(--color-background-font);
-  background-color: var(--color-background);
-  border-radius: 5px;
+  background-color: var(--color-background) !important;
 }
 
 .modal-body .card, .card {
-  background-color: var(--color-background);
+  background-color: var(--color-background) !important;
   color: var(--color-background-font);
-  border: 1px solid var(--color-modal-background-inverted);
+  border: 2px solid var(--color-modal-background-inverted);
 }
 
-.tooltip {
+.tooltip-modal {
   position: relative;
   display: inline-block;
   opacity: 1;
 }
 
-.tooltip .tooltiptext {
+.tooltip {
+  position: absolute;
+  transform: translateY(-50%);
+  margin-left: 3rem;
+  padding: 6px 10px;
+  border-radius: 4px;
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  white-space: nowrap;
+  opacity: 0.9;
+}
+
+.tooltip-modal .tooltiptext {
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.2s linear,
   visibility 0.2s linear 0.2s;
   width: 200px;
-  background-color: var(--color-background-mute);
-  color: var(--color-background-font);
+  background-color: var(--color-modal-background-inverted);
+  color: var(--color-background);
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
@@ -154,7 +172,7 @@ tr {
   margin-left: -100px;
 }
 
-.tooltip .tooltiptext::after {
+.tooltip-modal .tooltiptext::after {
   content: '';
   position: absolute;
   top: 100%;
@@ -165,13 +183,13 @@ tr {
   border-color: var(--color-modal-background-inverted) transparent transparent transparent;
 }
 
-.tooltip:hover .tooltiptext {
+.tooltip-modal:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
   transition: opacity 0.2s linear;
 }
 
-.tooltip .tooltiptext:hover {
+.tooltip-modal .tooltiptext:hover {
   visibility: hidden;
   opacity: 0;
 }
@@ -249,6 +267,11 @@ tr {
 .form-control:focus {
   outline: none;
   box-shadow: none;
+  color: var(--color-modal-background-inverted);
+}
+
+.form-control {
+  color: var(--color-background);
 }
 
 .btn-primary {
@@ -394,7 +417,7 @@ tr {
 }
 
 .offcanvas-body {
-  background-color: var(--color-background-soft);
+  background-color: var(--color-background);
   color: var(--color-background-font);
   position: relative;
 }
@@ -407,5 +430,8 @@ button:not(.btn-primary):not(.btn-secondary):hover i {
   color: var(--color-background-font);
 }
 
+.ellipsis {
+  color: var(--color-background-font);
+}
 
 
